--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -6,81 +6,49 @@
 	<ui:define name="conteudo">
 	
 	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+		<div class="row" style="margin: 20px;">
+			<div class="col-sm-2" style="padding: 0;">
+				<img src="/monitoria/imagens/user.jpg" class="demo-avatar"/>
+			</div>
+			<div class="col-sm-10" style="padding: 0;">
+			<span>Lucio Soares de Oliveira</span><br/>
+			<span>Tecnologia da Informação</span>
+			</div>
+			
+		</div>
+	
 	  <div class="mdl-card__title">
-	    <h2 class="mdl-card__title-text">Welcome</h2>
+	    <h2 class="mdl-card__title-text" style="color: black;">Welcome</h2>
 	  </div>
 	  <div class="mdl-card__supporting-text">
 	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+	    Mauris sagittis pellentesque lacus eleifend lacinia...
 	  </div>
 	  <div class="mdl-card__actions mdl-card--border">
-	    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-	      Get Started
-	    </a>
-	  </div>
-	  <div class="mdl-card__menu">
-	    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-	      <i class="material-icons">share</i>
+	    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+	      <i class="fa fa-thumbs-up" aria-hidden="true"></i> Curtir
 	    </button>
+	    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent">
+		  <i class="fa fa-file-text-o" aria-hidden="true"></i> Responder
+		</button>
 	  </div>
 	</div>
-	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text">Welcome</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Mauris sagittis pellentesque lacus eleifend lacinia...
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      Get Started
-    </a>
-  </div>
-  <div class="mdl-card__menu">
-    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-      <i class="material-icons">share</i>
-    </button>
-  </div>
-</div>
-<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text">Welcome</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Mauris sagittis pellentesque lacus eleifend lacinia...
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      Get Started
-    </a>
-  </div>
-  <div class="mdl-card__menu">
-    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-      <i class="material-icons">share</i>
-    </button>
-  </div>
-</div>
-<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title">
-    <h2 class="mdl-card__title-text">Welcome</h2>
-  </div>
-  <div class="mdl-card__supporting-text">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Mauris sagittis pellentesque lacus eleifend lacinia...
-  </div>
-  <div class="mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-      Get Started
-    </a>
-  </div>
-  <div class="mdl-card__menu">
-    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-      <i class="material-icons">share</i>
-    </button>
-  </div>
-</div>
 <button id="view-source" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">
   <i class="material-icons">add</i>
 </button>
@@ -98,6 +66,17 @@
 	.demo-card-wide > .mdl-card__menu {
 	  color: #fff;
 	}
+	.mdl-card__supporting-text{
+	    color: rgba(0,0,0,.54);
+    	font-size: 15px;
+    	line-height: 25px !important;
+    	overflow: hidden;
+    	padding: 20px !important;
+    	width: 100% !important;
+    }
+    .demo-card-wide > .mdl-card__title{
+    	height: 80px !important;
+    }
 	</style>
 	
 	</ui:define>
