--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -4,80 +4,104 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/include/template.xhtml">
 	<ui:define name="conteudo">
-	
-	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-		<div class="row" style="margin: 20px;">
-			<div class="col-sm-2" style="padding: 0;">
-				<img src="/monitoria/imagens/user.jpg" class="demo-avatar"/>
-			</div>
-			<div class="col-sm-10" style="padding: 0;">
-			<span>Lucio Soares de Oliveira</span><br/>
-			<span>Tecnologia da Informação</span>
-			</div>
+		<h:form prependId="false">
+		<style>
+			.mdl-button .mdl-badge[data-badge]:after {
+			    top: -5px;
+			    right: -26px;
+			    background-color: white !important;
+			    color: black !important;
+			}
+		</style>
+		<ui:repeat var="duvida" value="#{duvidaMBean.listDuvidas}">
+			<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+				<div class="row" style="margin: 20 20 0 20 ;">
+					<div class="col-sm-1" style="padding: 0;">
+						<img src="/monitoria/imagens/user.jpg" class="demo-avatar"/>
+					</div>
+					<div class="col-sm-6" style="padding: 0; color: rgba(0,0,0,.54);">
+					<span>#{duvida.pessoa.nome}</span><br/>
+					</div>
+					<div class="col-sm-4 pull-right" style="color: rgba(0,0,0,.54); text-align: right;">
+						<h:outputText value="#{duvida.dataCadastro}" >
+						    <f:convertDateTime pattern="dd/MM/yyyy HH:mm" timeZone="GMT-03:00"/>
+						</h:outputText>
+						
+					</div>
+					<div class="col-sm-6 pull-right" style="color: rgba(0,0,0,.54);text-align: right;">
+						#{duvida.disciplina.descricao}
+					</div>				
+				</div>
 			
+			  <div class="mdl-card__title">
+			    <h2 class="mdl-card__title-text" style="color: black;">#{duvida.assunto}</h2>
+			  </div>
+			  <div class="mdl-card__supporting-text">
+			    #{duvida.descricao}
+			  </div>
+			  <div class="mdl-card__actions mdl-card--border">
+			    <h:commandLink action="#" class="mdl-button mdl-js-button mdl-js-ripple-effect" style="margin-right: 10px;" >
+			    	<i class="fa fa-thumbs-up" aria-hidden="true"></i> Curtir
+			    </h:commandLink>
+			    <h:commandLink action="#{respostaMBean.respoder(duvida)}" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent">
+					<i class="fa fa-file-text-o" aria-hidden="true"></i> Responder<span class="mdl-badge" data-badge="#{respostaMBean.getQuantidadeResposta(duvida)}"></span>
+			    </h:commandLink>
+			  </div>
+			</div>
+		</ui:repeat>
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			<div class="row" style="margin: 20 20 0 20 ;">
+				<div class="col-sm-1" style="padding: 0;">
+					<img src="/monitoria/imagens/user.jpg" class="demo-avatar"/>
+				</div>
+				<div class="col-sm-6" style="padding: 0; color: rgba(0,0,0,.54);">
+				<span>Lucio Soares de Oliveira</span><br/>
+				<span>Tecnologia da Informação</span>
+				</div>
+				<div class="col-sm-2 pull-right" style="color: rgba(0,0,0,.54);">
+					22/10/2016
+				</div>
+				<div class="col-sm-6 pull-right" style="color: rgba(0,0,0,.54);text-align: right;">
+					Desenvolvimento WEb
+				</div>				
+			</div>
+		
+		  <div class="mdl-card__title">
+		    <h2 class="mdl-card__title-text" style="color: black;">Welcome</h2>
+		  </div>
+		  <div class="mdl-card__supporting-text">
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		    Mauris sagittis pellentesque lacus eleifend lacinia...
+		  </div>
+		  <div class="mdl-card__actions mdl-card--border">
+		    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+		      <i class="fa fa-thumbs-up" aria-hidden="true"></i> Curtir
+		    </button>
+		    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent">
+			  <i class="fa fa-file-text-o" aria-hidden="true"></i> Responder
+			</button>
+		  </div>
 		</div>
-	
-	  <div class="mdl-card__title">
-	    <h2 class="mdl-card__title-text" style="color: black;">Welcome</h2>
-	  </div>
-	  <div class="mdl-card__supporting-text">
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-	    Mauris sagittis pellentesque lacus eleifend lacinia...
-	  </div>
-	  <div class="mdl-card__actions mdl-card--border">
-	    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
-	      <i class="fa fa-thumbs-up" aria-hidden="true"></i> Curtir
-	    </button>
-	    <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent">
-		  <i class="fa fa-file-text-o" aria-hidden="true"></i> Responder
-		</button>
-	  </div>
-	</div>
-<button id="view-source" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">
-  <i class="material-icons">add</i>
-</button>
-	
-	<style>
-	.demo-card-wide.mdl-card {
-	  width: 80%;
-	  margin: 20px;	  
-	}
-	.demo-card-wide > .mdl-card__title {
-	  color: #fff;
-	  height: 176px;
-	  background: url('../assets/demos/welcome_card.jpg') center / cover;
-	}
-	.demo-card-wide > .mdl-card__menu {
-	  color: #fff;
-	}
-	.mdl-card__supporting-text{
-	    color: rgba(0,0,0,.54);
-    	font-size: 15px;
-    	line-height: 25px !important;
-    	overflow: hidden;
-    	padding: 20px !important;
-    	width: 100% !important;
-    }
-    .demo-card-wide > .mdl-card__title{
-    	height: 80px !important;
-    }
-	</style>
-	
+		
+		<h:commandLink action="#{duvidaMBean.novo()}" value="" id="view-source"  class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-color-text--white" style="float:right;margin:40px;">
+			  <i class="material-icons">add</i> 
+		</h:commandLink>
+		</h:form>
 	</ui:define>
 </ui:composition>
