--- a/src/main/webapp/pages/duvida/view.xhtml
+++ b/src/main/webapp/pages/duvida/view.xhtml
@@ -4,7 +4,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	template="/include/template.xhtml">
 	<ui:define name="conteudo">
-		<h:form prependId="false">
+		<h:form prependId="false" style="    width: 100%">
 		<style>
 			.mdl-button .mdl-badge[data-badge]:after {
 			    top: -5px;
