comentarios de duvidas e respostas

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -54,6 +54,9 @@
 			    <h:commandLink action="#{curtidaMBean.descurtir(duvida)}" class="descurtir mdl-button mdl-js-button mdl-js-ripple-effect" style="margin-right: 10px;" rendered="#{curtidaMBean.existeCurtida(duvida)}" >
 			    	<i class="fa fa-thumbs-up" aria-hidden="true"></i> Curtir<span class="mdl-badge" data-badge="#{curtidaMBean.getQtdCurtidas(duvida)}"></span>
 			    </h:commandLink>
+		      <h:commandLink action="#{comentarioMBean.comentarDuvida(duvida)}" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent" style="background: rgba(255, 82, 82, 0.6) !important;">
+					<i class="fa fa-file-text-o" aria-hidden="true"></i> Comentar<span class="mdl-badge" data-badge="#{comentarioMBean.getQuantidadeComentarioByDuvida(duvida)}"></span>
+			    </h:commandLink>
 			    <h:commandLink action="#{respostaMBean.respoder(duvida)}" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--raised mdl-button--accent">
 					<i class="fa fa-file-text-o" aria-hidden="true"></i> Responder<span class="mdl-badge" data-badge="#{respostaMBean.getQuantidadeResposta(duvida)}"></span>
 			    </h:commandLink>
